@@ -46,6 +46,7 @@ setup(
         'grokcore.annotation >= 1.1',
         'grokcore.component >= 1.5, < 2.0',
         'grokcore.content',
+        'grokcore.message',
         'grokcore.formlib >= 1.4',
         'grokcore.security >= 1.1',
         'grokcore.site',
@@ -55,7 +56,6 @@ setup(
         'pytz',
         'simplejson',
         'z3c.autoinclude',
-        'z3c.flashmessage',
         'zc.catalog',
         'zope.annotation',
         'zope.app.appsetup',
@@ -66,27 +66,26 @@ setup(
         'zope.component',
         'zope.container',
         'zope.copypastemove',
-        'zope.dottedname',
         'zope.event',
         'zope.exceptions',
         'zope.i18n',
-        'zope.i18nmessageid',
         'zope.interface',
         'zope.intid',
         'zope.keyreference',
         'zope.lifecycleevent',
         'zope.location',
-        'zope.pagetemplate',
         'zope.password',
-        'zope.pluggableauth',
         'zope.principalregistry',
-        'zope.proxy',
         'zope.publisher',
         'zope.schema',
         'zope.security',
         'zope.securitypolicy',
         'zope.site',
         'zope.traversing',
+        'zope.app.wsgi',
+        'zope.contentprovider',
+        'zope.login',
+        'zope.session',
         ],
     tests_require=tests_require,
     extras_require={'test': tests_require},
